Fix styling issue with lack of alignment and short width

--- a/tips/app/components/src/styles/processTable/editCommandModal.module.css
+++ b/tips/app/components/src/styles/processTable/editCommandModal.module.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     row-gap: 0.2rem;
     color: var(--primary);
+    flex-grow: 1;
 }
 
 .header > .headerLeft > h1 {
@@ -84,6 +85,7 @@
 }
 
 .configParent > .configHeader > .searchBox > .searchInput {
+    width: 100%;
     height: 1.5rem;
     background-color: transparent;
     border: none;
